--- a/src/passwordManager.web/passwordManager.web/Components/_Imports.razor
+++ b/src/passwordManager.web/passwordManager.web/Components/_Imports.razor
@@ -9,3 +9,5 @@
 @using passwordManager.web
 @using passwordManager.web.Client
 @using passwordManager.web.Components
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Components.Routing
