--- a/src/passwordManager.web/passwordManager.web.Client/_Imports.razor
+++ b/src/passwordManager.web/passwordManager.web.Client/_Imports.razor
@@ -1,4 +1,4 @@
-﻿@using System.Net.Http
+﻿v@using System.Net.Http
 @using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
@@ -7,3 +7,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using passwordManager.web.Client
+@using passwordManager.web.Client.Shared
+@using PasswordManager.Web.Client.Services
+@using passwordManager.web.Client.Pages
+@using passwordManager.web.Client.Models
