feat: end project

--- a/src/passwordManager.web/passwordManager.web.Client/Pages/Home.razor
+++ b/src/passwordManager.web/passwordManager.web.Client/Pages/Home.razor
@@ -34,7 +34,7 @@
                 }
                 else if (!filteredPasswords.Any())
                 {
-                    <p>No passwords found.</p>
+                    <p>No passwords found</p>
                 }
                 else
                 {
